Fixed nested submenu on mobile

--- a/style/base.css
+++ b/style/base.css
@@ -30,36 +30,18 @@ body, main {
     height: auto;
 }
 
-/* ============ desktop view ============ */
-@media all and (min-width: 992px) {
-  .dropdown-menu li { position: relative; }
-  .nav-item .submenu { 
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 65%;
-  }
-  .nav-item .submenu-left { 
-    left: auto;
-    right: 100%;
-  }
-  .dropdown-menu > li:hover > .submenu { display: block; }
-  /* Rest of your CSS... */
-}
-/* ============ desktop view .end// ============ */
-
-/* Additional styles for right-aligned submenus */
-@media all and (min-width: 992px) {
-  .dropdown-menu li:hover > .submenu[sub-menu-right] {
-    left: auto;
-    right: 100%;
-  }
+/* Submenu */
+.dropdown-submenu {
+  position: relative;
 }
 
-@media (max-width: 991px) {
-  .navbar .dropdown-menu .submenu {
-    position: static; /* Instead of absolute */
-  }
+.dropdown-submenu .dropdown-menu {
+  top: 10%;
+  left: 100;
+  margin-top: -1px;
 }
 
-
+.navbar-nav li:hover > ul.dropdown-menu {
+    display: block;
+}
+    
